see #1678: fix margins and flicker

--- a/src/modules/super-resolution/css/super-resolution.css
+++ b/src/modules/super-resolution/css/super-resolution.css
@@ -10,7 +10,13 @@
   border-top: 1px solid #dcdcde;
 }
 
+
+.compat-field-wl_super_resolution label {
+  cursor: auto;
+}
+
 .compat-field-wl_super_resolution label span {
+
   padding: 0px;
   margin-top: 17px;
   margin-left: 0px;
